--- a/OrderingSystem.Api/OrderingSystem.Api.csproj
+++ b/OrderingSystem.Api/OrderingSystem.Api.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrderingSystem.Application\OrderingSystem.Application.csproj" />
+  </ItemGroup>
+
 </Project>
