--- a/OrderingSystem.Infrastructure/OrderingSystem.Infrastructure.csproj
+++ b/OrderingSystem.Infrastructure/OrderingSystem.Infrastructure.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrderingSystem.Application\OrderingSystem.Application.csproj" />
+    <ProjectReference Include="..\OrderingSystem.Domain\OrderingSystem.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
