--- a/OrderingSystem.Infrastructure/OrderingSystem.Infrastructure.csproj
+++ b/OrderingSystem.Infrastructure/OrderingSystem.Infrastructure.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.11" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OrderingSystem.Application\OrderingSystem.Application.csproj" />
     <ProjectReference Include="..\OrderingSystem.Domain\OrderingSystem.Domain.csproj" />
   </ItemGroup>
