--- a/OrderingSystem.Api/appsettings.json
+++ b/OrderingSystem.Api/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+   
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=.;Database=OrderingDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
