--- a/OrderingSystem.Infrastructure/OrderingSystem.Infrastructure.csproj
+++ b/OrderingSystem.Infrastructure/OrderingSystem.Infrastructure.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\OrderingSystem.Domain\OrderingSystem.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
