--- a/OrderingSystem.Api/appsettings.json
+++ b/OrderingSystem.Api/appsettings.json
@@ -1,13 +1,19 @@
 {
-   
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=.;Database=OrderingDB;Trusted_Connection=True;TrustServerCertificate=True;"
-    },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=OrderingDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "UfC7LSDAZzYi64d183yhOOJQU3fjZesv",
+    "Issuer": "OrderingSystem",
+    "Audience": "OrderingSystemUsers"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
